# country_converter

./: .coverage  .coveragerc  .gitignore  .tags  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CITATION  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENCE  MANIFEST  README  README.md  README.rst  country_converter.py  country_converter_examples.ipynb  country_data - Copy.txt  country_data.txt  develop.py  environment.yml  format_and_test.sh  pyproject.toml  readme.rst  requirements.txt  setup.py
.cache/v/cache/: lastfailed
.github/workflows/: publish_pypi.yml  puplish_test_pypi.yml  tests_and_coverage.yml
.vim/: coc-settings.json
JOSS/: paper.bib  paper.md
country_converter/: __init__.py  country_converter.py  country_data.tsv  country_data.txt  multiregex.py  version.py
doc/: country_converter_aggregation_helper.ipynb  country_converter_examples.ipynb
doc/.ipynb_checkpoints/: country_converter_examples-checkpoint.ipynb
htmlcov/: country_converter___init___py.html  country_converter_country_converter_py.html  country_converter_version_py.html  index.html  status.json  tests___init___py.html  tests_test_country_converter_py.html
scripts/: coco_profiling.py
tests/: country_data.tsv  custom_data_example.txt  should_not_match.txt  test_admin.py  test_country_converter.py  test_fao_chine.txt  test_functionality.py  test_regex_china_taiwan_etc.txt  test_regex_congo_madness.txt  test_regex_korea.txt  test_regex_misc.txt  test_regex_united_kingdom.txt  test_series_data.csv
