[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "country_converter"
authors = [
    {name = "Konstantin Stadler", email = "konstantin.stadler@ntnu.no"},
]
description = "The country converter (coco) - a Python package for converting country names between different classifications schemes"
readme = "README.md"
keywords = ["country", "ISO 3166"]
dynamic = ["version"]
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = [
  "pandas >=1.0",
]

[project.optional-dependencies]
dev = ["country_converter[lint,test]"]
lint = [
  "black >=22.3.0",
  "isort >=5.5.2",
]
test = [
  "coveralls",
  "pytest >=5.4.0",
  "pytest-black",
  "pytest-cov >=2.7.0",
  "pytest-datadir",
  "pytest-mypy",
]

[project.scripts]
coco = "country_converter.country_converter:main"

[project.urls]
Repository = "https://github.com/IndEcol/country_converter"

[tool.setuptools]
packages = ["country_converter"]

[tool.setuptools.package-data]
country_converter = ["country_data.tsv"]

[tool.setuptools.dynamic]
version = {attr = "country_converter.version.__version__"}

[tool.isort]
profile = "black"
known_first_party = ["country_converter"]
